feat(server): user login route
