# server/internal/domain/user/auth.go
@@ -2,55 +2,79 @@ package user
 
 import (
 	"context"
-	"fmt"
+	"errors"
+	"time"
 
 	"github.com/lucianonooijen/capsa/server/internal/entities"
-
-	"github.com/google/uuid"
-
-	"github.com/lucianonooijen/capsa/server/internal/infrastructure/token"
 	"github.com/lucianonooijen/capsa/server/internal/interactor"
 )
 
-// ValidateUserJwt validates if the token passed in is valid for a user.
-func ValidateUserJwt(s *interactor.Services, tok string) (*token.JwtClaims, error) {
-	log := s.GetDomainLogger("client", "ValidateClientJwt")
+// Login validates a user's password and returns the login result if everything is valid.
+func Login(s *interactor.Services, email, password string) (*entities.UserLoginResult, error) {
+	log := s.GetDomainLogger("user", "CreateNewLogSession").With("email", email)
 	ctx := context.TODO()
 
-	log.Debugf("starting user jwt validation")
+	log.Debug("attempting to log in user")
 
-	claims, err := s.Token.ValidateJwt(tok)
+	// Get user
+	user, err := s.Database.GetUserByEmail(ctx, email)
 	if err != nil {
-		return nil, entities.NewDomainError(entities.DomainErrorInvalidArgument, "token validation failed", err)
-	}
-
-	log = log.With("jwt_aud", claims.Audience, "jwt_sub", claims.Subject)
-	log.Debug("token is valid, claims need verification")
-
-	if claims.Audience != token.AudienceUser {
-		message := fmt.Sprintf("token audience required is %s, but token contains %s", token.AudienceUser, claims.Audience)
-
-		return nil, entities.NewDomainError(entities.DomainErrorNoPermission, message, token.ErrorJwtInvalidAudience)
-	}
-
-	log.Debug("token is valid and audience claim is correct")
-
-	logUUID, err := uuid.Parse(claims.Subject)
-	if err != nil {
-		return nil, entities.NewDomainError(entities.DomainErrorUnexpected, "cannot parse subject claim to uuid", err)
-	}
-
-	log = log.With("user_uuid", logUUID)
-	log.Debugf("log uuid parsed")
-
-	user, err := s.Database.GetUserByUuid(ctx, logUUID)
-	if err != nil {
-		log.Warnf("cannot get log by uuid %s: %s", logUUID, err)
+		log.Warn("user not found")
 
 		return nil, entities.NewDomainErrorFromDatabaseError(err)
 	}
 
-	log.With("user_id", user.ID).Info("user found in database")
+	log = log.With("user_uuid", user.UserUuid)
+	log.Debug("user found")
 
-	return claims, nil
+	if !user.PasswordHash.Valid || !user.PasswordUuid.Valid {
+		log.Warnf("user password hash (%#v) or password uuid (%#v) not found", user.PasswordHash, user.PasswordUuid)
+
+		return nil, entities.NewDomainError(entities.DomainErrorNotFound, "user password not set", errors.New("password hash or uuid not valid"))
+	}
+
+	name := user.FirstName + " " + user.LastName
+
+	log = log.With("name", name)
+	log.Debug("user password is set")
+
+	// Validate password
+	err = s.Passhash.ComparePassToHash(password, user.PasswordHash.String)
+	if err != nil {
+		log.Warnf("error validating user password hash: %s", err)
+
+		return nil, entities.NewDomainError(entities.DomainErrorNoPermission, "password validation failed", err)
+	}
+
+	log.Debug("user password validation succeeded")
+
+	// Generate JWT
+	jwt, err := s.Token.GenerateUserJwt(user.UserUuid.String(), user.PasswordUuid.UUID.String(), name)
+	if err != nil {
+		return nil, entities.NewDomainError(entities.DomainErrorUnexpected, "cannot generate jwt for log session", err)
+	}
+
+	log.Debug("token generated")
+
+	// Get JWT claims
+	jwtClaims, err := s.Token.ValidateJwt(jwt)
+	if err != nil {
+		return nil, entities.NewDomainError(entities.DomainErrorUnexpected, "cannot get jwt claims for user token", err)
+	}
+
+	log.Debug("token parsed")
+
+	// Assemble information
+	logSession := entities.UserLoginResult{
+		Token:       jwt,
+		FirstName:   user.FirstName,
+		LastName:    user.LastName,
+		Email:       user.Email,
+		UserUUID:    user.UserUuid.String(),
+		TokenExpiry: time.Unix(jwtClaims.Expiry, 0),
+	}
+
+	log.Info("user successfully authenticated")
+
+	return &logSession, nil
 }
